--- a/_posts/2019-02-12-coding.md
+++ b/_posts/2019-02-12-coding.md
@@ -20,4 +20,6 @@ It took about whole day to solve those problems, with some researches(lastly!)<b
 
 ## In conclusion
 It was freaking hard though; As one of the basic students that never done C before, it was, again, freaking hard.<br/>
-But the thing is, I got couple of questions to solve, so, its the beginning!
+But the thing is, I got couple of questions to solve, so, its the beginning!<br/>
+<br/>
+Oh, I am not releasing source code since its really common in Google.
